--- a/week-06/day-2-Tables_Forms/SignUpForm/signUpStyles.css
+++ b/week-06/day-2-Tables_Forms/SignUpForm/signUpStyles.css
@@ -87,7 +87,7 @@ form {
   }
 
   .twitter {
-    margin: 15px 0 0 0;
+    margin: 15px 15px 0 0;
     background-color: lightskyblue;
     width: 200px;
     color: white;
