added validate email

--- a/week-07/day-4_Dependency/todaytasks/src/main/resources/templates/email.html
+++ b/week-07/day-4_Dependency/todaytasks/src/main/resources/templates/email.html
@@ -2,12 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Email</title>
 </head>
 <body>
 
-    <p th:style="'color:' + ${color}" th:text="${emailChecked}"></p>
+<p th:style="'color:' + ${color}" th:text="${emailChecked}"></p>
 
 
 </body>
 </html>
+
+
+
+
