--- a/week-07/day-5_Fox Club/src/main/resources/templates/index.html
+++ b/week-07/day-5_Fox Club/src/main/resources/templates/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <a href="">Information</a><br/>
+<a href="/login">Login</a><br/>
 <img src="greenfox.png">
-<p th:text="'This is '+ ${foxName} + '. Currently living on '+ ${food} + ' and ' + ${drink} + '. He knows 2 tricks.'">This is Mr. Fox. Currently livig on pizza and lemonade. He knows 2 tricks.</p>
+<p th:text="|This is ${foxName}. Currently living on ${food} and ${drink}. He knows ${tricks.size()} tricks.|">This is
+    Mr. Fox. Currently livig on pizza and lemonade. He know 1 trick.</p>
 <h1>Known tricks</h1>
-<ul>
-    <li>write HTML</li>
-    <li>code in Java</li>
+<ul th:each="trick: ${tricks}">
+    <li th:text="${trick}">write HTML</li>
 </ul>
-
-
 </body>
 </html>
+
