--- a/week-07/day-5_Fox Club/src/main/resources/templates/login.html
+++ b/week-07/day-5_Fox Club/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Welcom to Programmer Fox Club!</h1>
+    <h1>Welcome to Programmer Fox Club!</h1>
     <p>Please provide a name, so you can associate it to your pet!</p>
     <form action="/login" method="get">
         <label for="name">Name</label>
