--- a/week-07/day-5_Fox Club/src/main/resources/templates/login.html
+++ b/week-07/day-5_Fox Club/src/main/resources/templates/login.html
@@ -7,9 +7,17 @@
 <body>
     <h1>Welcome to Programmer Fox Club!</h1>
     <p>Please provide a name, so you can associate it to your pet!</p>
+    <p th:text="${notExists}" th:style="|color: red|"></p>
+    <p th:text="${null}" th:style="|color: red|"></p>
+
     <form action="/login" method="get">
         <label for="name">Name</label>
         <input type="text" name="name" id="name">
+        <button style="text-transform: uppercase">go</button>
+    </form>
+
+    <form action="/login" method="post">
+        <input type="text" name="name" id="addName">
         <button style="text-transform: uppercase">go</button>
     </form>
 
