--- a/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
@@ -6,9 +6,22 @@
 </head>
 <body>
 <h1>Todos for today</h1>
-<ul th:each="todo : ${todos}">
-    <li th:text="${todo.getTitle()}"></li>
-</ul>
+<table>
+
+    <tr>
+        <th>ID</th>
+        <th>ACTION</th>
+        <th>DONE</th>
+        <th>URGENT</th>
+    </tr>
+    <tr th:each="todo : ${todos}">
+        <td th:text="${todo.getId()}">ID</td>
+        <td th:text="${todo.getTitle()}">Action</td>
+        <td th:text="${todo.isDone()}">Done</td>
+        <td th:text="${todo.isUrgent()}">Urgent</td>
+
+    </tr>
+</table>
 
 </body>
 </html>
