--- a/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo list</title>
+    <link rel="stylesheet" type="text/css" href="/main.css">
 </head>
 <body>
 <h1>Todos for today</h1>
+
+<a href="/todo/add" >Add new todo</a><br>
 <table>
 
     <tr>
