--- a/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
@@ -22,6 +22,11 @@
         <td th:text="${todo.getTitle()}">Action</td>
         <td th:text="${todo.isDone()}">Done</td>
         <td th:text="${todo.isUrgent()}">Urgent</td>
+        <td> <a th:href="@{/todo/{id}/delete(id=${todo.getId()})}">delete</a></td>
+        <td>
+            <a th:href="@{/todo/{id}/edit(id=${todo.getId()})}" th:action="@{/todo/{id}/edit(id=${todo.getId()})}">edit</a>
+
+        </td>
 
     </tr>
 </table>
