--- a/week-08/day-01-Database_integration/mysql/src/main/resources/templates/search.html
+++ b/week-08/day-01-Database_integration/mysql/src/main/resources/templates/search.html
@@ -8,34 +8,23 @@
 <body>
 <h1>Todos for today</h1>
 
-<a href="/todo/add" >Add new todo</a><br>
-
-<form th:action="@{/todo/search}", th:method="post" th:object="${todo}">
-    <label for="title">Search todo
-        <input name="title" type="text" id="title" placeholder="title or description" th:field="*{title}">
-    </label>
-    <button>Search</button>
-</form>
+<p th:text="${queryResult}"></p>
 
 <table>
 
     <tr>
         <th>ID</th>
         <th>ACTION</th>
+        <th>DESCRIPTION</th>
         <th>DONE</th>
         <th>URGENT</th>
     </tr>
-    <tr th:each="todo : ${todos}">
+    <tr th:each="todo : ${foundItems}">
         <td th:text="${todo.getId()}">ID</td>
         <td th:text="${todo.getTitle()}">Action</td>
+        <td th:text="${todo.getDescription()}">Action</td>
         <td th:text="${todo.isDone()}">Done</td>
         <td th:text="${todo.isUrgent()}">Urgent</td>
-        <td> <a th:href="@{/todo/{id}/delete(id=${todo.getId()})}">delete</a></td>
-        <td>
-            <a th:href="@{/todo/{id}/edit(id=${todo.getId()})}" th:action="@{/todo/{id}/edit(id=${todo.getId()})}">edit</a>
-
-        </td>
-
     </tr>
 </table>
 
