--- a/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
@@ -9,6 +9,7 @@
 <h1>Todos for today</h1>
 
 <a href="/todo/add" >Add new todo</a><br>
+<a href="/todo/assign" >List of assignees</a><br>
 
 <form th:action="@{/todo/search}", th:method="post" th:object="${todo}">
     <label for="title">Search todo
@@ -38,6 +39,8 @@
 
     </tr>
 </table>
+
+
 
 </body>
 </html>
