Fox Club some minor modifications

--- a/week-07/day-4_Dependency/gfa/src/main/resources/templates/Checker.html
+++ b/week-07/day-4_Dependency/gfa/src/main/resources/templates/Checker.html
@@ -8,7 +8,7 @@
 <body>
 <form th:action="@{/gfa/check}", th:method="get">
     <label>Search:
-        <input type="text" name="name" placeholder="Student's name">
+        <input type="text" name="name" placeholder="Student's name" required>
     </label>
     <button>Find</button>
 </form>
