--- a/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-01-Database_integration/mysql/src/main/resources/templates/todolist.html
@@ -11,7 +11,7 @@
 <a href="/todo/add" >Add new todo</a><br>
 <a href="/todo/assign" >List of assignees</a><br>
 
-<form th:action="@{/todo/search}", th:method="post" th:object="${todo}">
+<form th:action="@{/todo/search}" th:method="post" th:object="${todo}">
     <label for="title">Search todo
         <input name="title" type="text" id="title" placeholder="title or description" th:field="*{title}">
     </label>
@@ -31,7 +31,7 @@
         <td th:text="${todo.getTitle()}">Action</td>
         <td th:text="${todo.isDone()}">Done</td>
         <td th:text="${todo.isUrgent()}">Urgent</td>
-        <td> <a th:href="@{/todo/{id}/delete(id=${todo.getId()})}">delete</a></td>
+        <td> <a th:href="@{/todo/{id}/delete(id=${todo.getId()})}" >delete</a></td>
         <td>
             <a th:href="@{/todo/{id}/edit(id=${todo.getId()})}" th:action="@{/todo/{id}/edit(id=${todo.getId()})}">edit</a>
 
